[package]
name = "rust-example-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "0.99.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
tokio = { version="1.44.1", features = [
    "macros",
    "rt-multi-thread",
] } # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources
thiserror = "2.0.12"
anyhow = "1.0.97"
log = "0.4.27"
futures-util = "0.3.31"
pretty_env_logger = "0.5.0"
